設計網頁按鈕建立連線，還有websocket關閉幀

--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html>
 <head>
 	<title>search</title>
+	<meta charset="UTF-8">
+	<script src="index.js"></script>
 </head>
 <body>
 	<hi>hello world</hi>
 	<p> this is a sample</p>
+	<button id="websocket_connect">連線</button>
 </body>
 </html>
