介面及輸入法修正和輸入狀態機

--- a/ui/index.html
+++ b/ui/index.html
@@ -13,16 +13,34 @@
 				<p id="screen_width_html">寬度:</p>
 			</div>
 			<div>
-				<button id="websocket_html">連線</button>
+				<p id="mode_display_html">模式:</p>
 			</div>
 			<div>
-				<textarea readonly id="websocket_output_html"></textarea>
+				<p id="ID_html">用戶ID:</p>
 			</div>
 			<div>
-				<textarea id="websocket_input_html"></textarea>
+				<button id="websocket_connection_html">連線</button>
 			</div>
 			<div>
-				<button id="websocket_send_html">發送</button>
+				<textarea readonly id="chat_output_html"></textarea>
+			</div>
+			<div>
+				<textarea id="chat_input_html"></textarea>
+			</div>
+			<div>
+				<button id="chat_send_html">聊天室發送</button>
+			</div>
+			<div>
+				<p></p>
+			</div>
+			<div>
+				<textarea readonly id="command_output_html"></textarea>
+			</div>
+			<div>
+				<textarea id="command_input_html"></textarea>
+			</div>
+			<div>
+				<button id="command_send_html">命令發送</button>
 			</div>
 		</div>
 		<div>
