--- a/ui/index.html
+++ b/ui/index.html
@@ -19,6 +19,9 @@
 				<p id="ID_html">用戶ID:</p>
 			</div>
 			<div>
+				<p id="main_canvas_mouse_location_html">滑鼠座標:</p>
+			</div>
+			<div>
 				<button id="websocket_connection_html">連線</button>
 			</div>
 			<div>
